add HorseTest, add MainTest, add dependencies, and plugins